--- a/css/style.css
+++ b/css/style.css
@@ -8,3 +8,13 @@
   outline: none;
   border: 0;
 }
+
+#container {
+  margin: 20px;
+}
+
+.item {
+  width: 300px;
+  height: 300px;
+  background-color: blue;
+}
