--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,13 @@
   margin: 20px;
 }
 
-.item {
-  background-color: blue;
+.brick {
+  padding: 5%;
+  width: 50%;
+}
+
+@media (max-width: 1000px) {
+  .brick {
+    width: 100%;
+  }
 }
